--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 07:04:00 PM</p>
+    <p class="lastupdate">09/03/2020 07:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.9&#176;F</td>
+        <td class="data">83.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.9&#176;F</td>
+        <td class="data">83.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.9&#176;F</td>
+        <td class="data">83.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.3&#176;F</td>
+        <td class="data">52.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.875 inHg (0.008)</td>
+        <td class="data">29.874 inHg (0.015)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph N (0&#176;)</td>
+        <td class="data">5 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">92.0&#176;F</td>
+        <td class="data">90.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -448,15 +448,15 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          156
+          155
         </td>
         <td class="data new_row hilo_year">
           2<br/>
-          210
+          211
         </td>
         <td class="data new_row hilo_rainyear">
           2<br/>
-          210
+          211
         </td>
         <td class="units">
            mph<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 4 hours, 17 minutes</td>
+      <td class="data">2 days, 4 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 4 hours, 17 minutes</td>
+      <td class="data">2 days, 4 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
