--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 08:29:00 PM</p>
+    <p class="lastupdate">09/03/2020 08:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">76.2&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">76.2&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">76.2&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.7&#176;F</td>
+        <td class="data">52.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.902 inHg (0.059)</td>
+        <td class="data">29.899 inHg (0.055)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph N (0&#176;)</td>
+        <td class="data">6 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.3&#176;F</td>
+        <td class="data">80.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          87
+          79
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 5 hours, 42 minutes</td>
+      <td class="data">2 days, 5 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 5 hours, 42 minutes</td>
+      <td class="data">2 days, 5 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
